change in order to be compliant with java8